@@ -37,6 +37,9 @@
 Copyright 2000, 2001 <a href="http://www.primix.com">Primix</a> and released under the 
 <a target="gnu-copyleft" href="http://www.gnu.org/copyleft/lesser.html">Lesser GNU Public License</a>.
 
-<jwc id="showInspector"/>
+<jwc id="ifShowInspector">
+	<jwc id="showInspector"/>
+</jwc>
+
 </jwc>
 </jwc>
