@@ -41,7 +41,7 @@
 
 	<tr>
 		<td></td>
-		<td><jwc id="borrow">[Borrow]</jwc></td>
+		<td><jwc id="borrow"/></td>
 	</tr>
 </table>
 
